--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -1,8 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="day_10">
+        
+    <wb-module deploy-name="2020Web">
+                
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
+                
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
-        <property name="context-root" value="day_10"/>
-        <property name="java-output-path" value="/day_10/build/classes"/>
+                
+        <property name="java-output-path" value="/2020Web/build/classes"/>
+        <property name="context-root" value="2020Web"/>
+            
     </wb-module>
+    
 </project-modules>
